<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_list"
    android:layout_marginTop="10dp"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:id="@+id/layout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewIngredient"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/image_void"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_ingredient"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/circleImageViewIngredient"
        app:layout_constraintTop_toTopOf="@+id/circleImageViewIngredient" />


    <TextView
        android:id="@+id/text_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_brand"
        android:textColor="@color/gray_light"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/circleImageViewIngredient"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_quantity"
        android:textColor="@color/gray_light"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/circleImageViewIngredient"
        app:layout_constraintTop_toBottomOf="@+id/text_brand" />

    <TextView
        android:id="@+id/text_unitMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="Unit"
        android:textColor="@color/gray_light"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/text_quantity"
        app:layout_constraintTop_toTopOf="@+id/text_quantity" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_price"
        android:textColor="@color/orange"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageViewIngredient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circleImageViewIngredient" />

    <ImageView
        android:id="@+id/imageViewTrash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_trash" />

</androidx.constraintlayout.widget.ConstraintLayout>

