<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_medium"
    tools:context=".view.CreateAndUpdateIngredientActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_activity" />

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewingredient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewingredient"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textViewingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_ingredient"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewIngredient"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/image_void"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <ImageButton
        android:id="@+id/buttonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        android:background="@drawable/background_button_image"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageViewIngredient"
        app:layout_constraintStart_toStartOf="@+id/circleImageViewIngredient"
        app:layout_constraintTop_toTopOf="@+id/circleImageViewIngredient"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/buttonGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_image"
        android:padding="7dp"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageViewIngredient"
        app:layout_constraintEnd_toEndOf="@+id/circleImageViewIngredient"
        app:layout_constraintTop_toTopOf="@+id/circleImageViewIngredient"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_inputs"
        android:hint="@string/title_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/gray_minium"
        android:maxLength="70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageViewIngredient" />

    <EditText
        android:id="@+id/editTextBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_inputs"
        android:hint="@string/title_brand"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/gray_minium"
        android:maxLength="70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_inputs"
        android:padding="12dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/gray_minium"
        android:hint="@string/title_price"
        android:inputType="number"
        android:maxLength="70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBrand" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/background_inputs"
        android:ems="10"
        android:hint="@string/title_quantity"
        android:padding="12dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/gray_minium"
        android:inputType="number"
        android:maxLength="70"
        app:layout_constraintEnd_toStartOf="@+id/spinnerUnitMeasure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <Spinner
        android:id="@+id/spinnerUnitMeasure"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:padding="12dp"
        android:background="@drawable/background_spinner"
        android:entries="@array/unitOfMeasurement"
        app:layout_constraintBottom_toBottomOf="@+id/editTextQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextQuantity" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_save"
        android:textSize="20sp"
        android:textColor="@color/gray_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>